# clipool

./: .env.example  .gitignore  ACCOUNTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  README_CN.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
cli_proxy/: CLAUDE_CODE_AGY_TUTORIAL.md  __init__.py  __main__.py  account.py  anthropic.py  config.py  runner.py  server.py
cli_proxy/providers/: antigravity.py  antigravity_http.py  base.py  codex.py
clipool/: __init__.py  __main__.py  account.py  config.py  executor.py  pool.py  quota.py  router.py  runner.py  server.py  version.py
clipool/providers/: antigravity.py  antigravity_http.py  base.py  claude.py  codex.py
docs/: accounts.md  architecture.md  claude_code_agy_tutorial.md  claude_code_guide.md  fastapi_guide.md  tutorial.md
src/cli_proxy/: __main__.py  config.py  pool.py
src/cli_proxy/providers/: antigravity_http.py  grok.py
src/proxy/: __init__.py  __main__.py  account.py  config.py  executor.py  pool.py  quota.py  server.py
src/proxy/providers/: __init__.py  antigravity_http.py  base.py  codex.py  copilot.py  grok.py
tests/: test_anthropic.py  test_auth_dir_config.py  test_dashboard.py  test_executor.py  test_keychain_safety.py  test_models_endpoint.py  test_persistence_safety.py  test_pool.py  test_quota.py  test_router.py  test_security.py  test_subprocess_cleanup.py
ui/: __init__.py  dashboard.html  streamlit_app.py
