[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clipool"
version = "0.1.0"
description = "Local OpenAI/Anthropic-compatible proxy for subscription CLIs."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "clipool contributors" }
]
keywords = ["fastapi", "claude-code", "openai-compatible", "anthropic", "cli"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Framework :: FastAPI",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "fastapi>=0.110",
  "pydantic>=2",
  "requests>=2.31",
  "uvicorn[standard]>=0.27",
]

[project.optional-dependencies]
client = [
  "openai>=1.0",
]
langchain = [
  "langchain-openai>=0.1",
]
ui = [
  "streamlit>=1.30",
]
dev = [
  "httpx>=0.27",
  "pytest>=8",
]

[project.urls]
Homepage = "https://github.com/Random-Walk2026/clipool"
Repository = "https://github.com/Random-Walk2026/clipool"
Issues = "https://github.com/Random-Walk2026/clipool/issues"

[project.scripts]
clipool = "clipool.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["clipool*"]

# 注意：UI 资源（dashboard.html / streamlit_app.py）放在仓库根目录的 ui/ 下，
# 不随 wheel 分发；server 通过源码树路径或 CLIPOOL_UI_DIR 定位。

[tool.pytest.ini_options]
testpaths = ["tests"]
