[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clipool"
version = "0.1.0"
description = "Local OpenAI/Anthropic-compatible proxy for subscription CLIs and profiles."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "clipool contributors" }
]
keywords = ["fastapi", "claude-code", "openai-compatible", "anthropic", "cli"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Framework :: FastAPI",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "fastapi>=0.110",
  "pydantic>=2",
  "requests>=2.31",
  "uvicorn[standard]>=0.27",
]

[project.optional-dependencies]
client = [
  "openai>=1.0",
]
langchain = [
  "langchain-openai>=0.1",
]
ui = [
  "streamlit>=1.30",
]
dev = [
  "build>=1.2",
  "coverage[toml]>=7.6",
  "httpx>=0.27",
  "mypy>=1.11",
  "pytest>=8",
  "ruff>=0.7",
]

[project.urls]
Homepage = "https://github.com/Random-Walk2026/clipool"
Repository = "https://github.com/Random-Walk2026/clipool"
Issues = "https://github.com/Random-Walk2026/clipool/issues"
Documentation = "https://github.com/Random-Walk2026/clipool#documentation"
Changelog = "https://github.com/Random-Walk2026/clipool/blob/main/CHANGELOG.md"

[project.scripts]
clipool = "clipool.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["clipool*", "ui*"]

[tool.setuptools.package-data]
ui = ["dashboard.html"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["clipool"]

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]

[tool.mypy]
python_version = "3.10"
check_untyped_defs = true
ignore_missing_imports = true
warn_unused_configs = true
